--- a/temp.ipynb
+++ b/temp.ipynb
@@ -109,25 +109,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "Too many indices for array: 3 non-None/Ellipsis indices for dim 2.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[94], line 117\u001b[0m\n\u001b[1;32m    111\u001b[0m fitness \u001b[39m=\u001b[39m jnp\u001b[39m.\u001b[39marray([[\u001b[39m5\u001b[39m, \u001b[39m6\u001b[39m, \u001b[39m7\u001b[39m],\n\u001b[1;32m    112\u001b[0m                      [\u001b[39m3\u001b[39m, \u001b[39m7\u001b[39m, \u001b[39m1\u001b[39m],\n\u001b[1;32m    113\u001b[0m                      [\u001b[39m4\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m7\u001b[39m],\n\u001b[1;32m    114\u001b[0m                      [\u001b[39m8\u001b[39m, \u001b[39m8\u001b[39m, \u001b[39m6\u001b[39m]])\n\u001b[1;32m    115\u001b[0m rank \u001b[39m=\u001b[39m jnp\u001b[39m.\u001b[39marray([\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m])\n\u001b[0;32m--> 117\u001b[0m run(pop_size, n_objs, ref, population, next_generation, self_fitness, fitness, rank)\n",
-      "Cell \u001b[0;32mIn[94], line 91\u001b[0m, in \u001b[0;36mrun\u001b[0;34m(pop_size, n_objs, ref, population, next_generation, self_fitness, fitness, rank)\u001b[0m\n\u001b[1;32m     87\u001b[0m d \u001b[39m=\u001b[39m jnp\u001b[39m.\u001b[39mwhere(rank \u001b[39m==\u001b[39m last_rank, d, jnp\u001b[39m.\u001b[39mnan)\n\u001b[1;32m     88\u001b[0m survivor_idx \u001b[39m=\u001b[39m jax\u001b[39m.\u001b[39mlax\u001b[39m.\u001b[39mwhile_loop(\u001b[39mlambda\u001b[39;00m val: val[\u001b[39m1\u001b[39m] \u001b[39m<\u001b[39m pop_size,\n\u001b[1;32m     89\u001b[0m                                   niche_loop,\n\u001b[1;32m     90\u001b[0m                                   (survivor_idx, jnp\u001b[39m.\u001b[39msum(rho), rho))\n\u001b[0;32m---> 91\u001b[0m \u001b[39mreturn\u001b[39;00m ranked_pop[survivor_idx], ranked_fitness[survivor_idx]\n",
-      "File \u001b[0;32m~/.conda/envs/evox/lib/python3.9/site-packages/jax/_src/array.py:317\u001b[0m, in \u001b[0;36mArrayImpl.__getitem__\u001b[0;34m(self, idx)\u001b[0m\n\u001b[1;32m    315\u001b[0m   \u001b[39mreturn\u001b[39;00m lax_numpy\u001b[39m.\u001b[39m_rewriting_take(\u001b[39mself\u001b[39m, idx)\n\u001b[1;32m    316\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 317\u001b[0m   \u001b[39mreturn\u001b[39;00m lax_numpy\u001b[39m.\u001b[39;49m_rewriting_take(\u001b[39mself\u001b[39;49m, idx)\n",
-      "File \u001b[0;32m~/.conda/envs/evox/lib/python3.9/site-packages/jax/_src/numpy/lax_numpy.py:4143\u001b[0m, in \u001b[0;36m_rewriting_take\u001b[0;34m(arr, idx, indices_are_sorted, unique_indices, mode, fill_value)\u001b[0m\n\u001b[1;32m   4140\u001b[0m       \u001b[39mreturn\u001b[39;00m lax\u001b[39m.\u001b[39mdynamic_index_in_dim(arr, idx, keepdims\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m   4142\u001b[0m treedef, static_idx, dynamic_idx \u001b[39m=\u001b[39m _split_index_for_jit(idx, arr\u001b[39m.\u001b[39mshape)\n\u001b[0;32m-> 4143\u001b[0m \u001b[39mreturn\u001b[39;00m _gather(arr, treedef, static_idx, dynamic_idx, indices_are_sorted,\n\u001b[1;32m   4144\u001b[0m                unique_indices, mode, fill_value)\n",
-      "File \u001b[0;32m~/.conda/envs/evox/lib/python3.9/site-packages/jax/_src/numpy/lax_numpy.py:4152\u001b[0m, in \u001b[0;36m_gather\u001b[0;34m(arr, treedef, static_idx, dynamic_idx, indices_are_sorted, unique_indices, mode, fill_value)\u001b[0m\n\u001b[1;32m   4149\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_gather\u001b[39m(arr, treedef, static_idx, dynamic_idx, indices_are_sorted,\n\u001b[1;32m   4150\u001b[0m             unique_indices, mode, fill_value):\n\u001b[1;32m   4151\u001b[0m   idx \u001b[39m=\u001b[39m _merge_static_and_dynamic_indices(treedef, static_idx, dynamic_idx)\n\u001b[0;32m-> 4152\u001b[0m   indexer \u001b[39m=\u001b[39m _index_to_gather(shape(arr), idx)  \u001b[39m# shared with _scatter_update\u001b[39;00m\n\u001b[1;32m   4153\u001b[0m   y \u001b[39m=\u001b[39m arr\n\u001b[1;32m   4155\u001b[0m   \u001b[39mif\u001b[39;00m fill_value \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
-      "File \u001b[0;32m~/.conda/envs/evox/lib/python3.9/site-packages/jax/_src/numpy/lax_numpy.py:4253\u001b[0m, in \u001b[0;36m_index_to_gather\u001b[0;34m(x_shape, idx, normalize_indices)\u001b[0m\n\u001b[1;32m   4250\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_index_to_gather\u001b[39m(x_shape: Sequence[\u001b[39mint\u001b[39m], idx: Sequence[Any],\n\u001b[1;32m   4251\u001b[0m                      normalize_indices: \u001b[39mbool\u001b[39m \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m _Indexer:\n\u001b[1;32m   4252\u001b[0m   \u001b[39m# Remove ellipses and add trailing slice(None)s.\u001b[39;00m\n\u001b[0;32m-> 4253\u001b[0m   idx \u001b[39m=\u001b[39m _canonicalize_tuple_index(\u001b[39mlen\u001b[39;49m(x_shape), idx)\n\u001b[1;32m   4255\u001b[0m   \u001b[39m# Check for advanced indexing:\u001b[39;00m\n\u001b[1;32m   4256\u001b[0m   \u001b[39m# https://docs.scipy.org/doc/numpy/reference/arrays.indexing.html#advanced-indexing\u001b[39;00m\n\u001b[1;32m   4257\u001b[0m \n\u001b[1;32m   4258\u001b[0m   \u001b[39m# Do the advanced indexing axes appear contiguously? If not, NumPy semantics\u001b[39;00m\n\u001b[1;32m   4259\u001b[0m   \u001b[39m# move the advanced axes to the front.\u001b[39;00m\n\u001b[1;32m   4260\u001b[0m   advanced_axes_are_contiguous \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n",
-      "File \u001b[0;32m~/.conda/envs/evox/lib/python3.9/site-packages/jax/_src/numpy/lax_numpy.py:4586\u001b[0m, in \u001b[0;36m_canonicalize_tuple_index\u001b[0;34m(arr_ndim, idx, array_name)\u001b[0m\n\u001b[1;32m   4584\u001b[0m len_without_none \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m(\u001b[39m1\u001b[39m \u001b[39mfor\u001b[39;00m e \u001b[39min\u001b[39;00m idx \u001b[39mif\u001b[39;00m e \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m e \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mEllipsis\u001b[39m)\n\u001b[1;32m   4585\u001b[0m \u001b[39mif\u001b[39;00m len_without_none \u001b[39m>\u001b[39m arr_ndim:\n\u001b[0;32m-> 4586\u001b[0m   \u001b[39mraise\u001b[39;00m \u001b[39mIndexError\u001b[39;00m(\n\u001b[1;32m   4587\u001b[0m       \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mToo many indices for \u001b[39m\u001b[39m{\u001b[39;00marray_name\u001b[39m}\u001b[39;00m\u001b[39m: \u001b[39m\u001b[39m{\u001b[39;00mlen_without_none\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   4588\u001b[0m       \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mnon-None/Ellipsis indices for dim \u001b[39m\u001b[39m{\u001b[39;00marr_ndim\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   4589\u001b[0m ellipses \u001b[39m=\u001b[39m (i \u001b[39mfor\u001b[39;00m i, elt \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(idx) \u001b[39mif\u001b[39;00m elt \u001b[39mis\u001b[39;00m \u001b[39mEllipsis\u001b[39m)\n\u001b[1;32m   4590\u001b[0m ellipsis_index \u001b[39m=\u001b[39m \u001b[39mnext\u001b[39m(ellipses, \u001b[39mNone\u001b[39;00m)\n",
-      "\u001b[0;31mIndexError\u001b[0m: Too many indices for array: 3 non-None/Ellipsis indices for dim 2."
-     ]
+     "data": {
+      "text/plain": [
+       "(Array([[0, 0],\n",
+       "        [5, 5],\n",
+       "        [1, 1],\n",
+       "        [6, 6]], dtype=int32),\n",
+       " Array([[1., 2., 3.],\n",
+       "        [3., 7., 1.],\n",
+       "        [7., 4., 2.],\n",
+       "        [4., 3., 7.]], dtype=float32, weak_type=True))"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -135,7 +135,7 @@
     "from functools import partial\n",
     "from jax import numpy as jnp\n",
     "\n",
-    "# @partial(jax.jit, static_argnames=('pop_size', 'n_objs'))\n",
+    "@partial(jax.jit, static_argnames=('pop_size', 'n_objs'))\n",
     "def run(pop_size, n_objs, ref, population, next_generation, self_fitness, fitness, rank):\n",
     "    merged_pop = jnp.concatenate([population, next_generation], axis=0)\n",
     "    merged_fitness = jnp.concatenate([self_fitness, fitness], axis=0)\n",
@@ -218,9 +218,10 @@
     "    rho = jnp.bincount(jnp.where(rank < last_rank, pi, len(ref)), length=len(ref))\n",
     "    pi = jnp.where(rank == last_rank, pi, -1)\n",
     "    d = jnp.where(rank == last_rank, d, jnp.nan)\n",
-    "    survivor_idx = jax.lax.while_loop(lambda val: val[1] < pop_size,\n",
+    "    survivor_idx, _, _ = jax.lax.while_loop(lambda val: val[1] < pop_size,\n",
     "                                      niche_loop,\n",
     "                                      (survivor_idx, jnp.sum(rho), rho))\n",
+    "    # return survivor_idx, survivor_idx\n",
     "    return ranked_pop[survivor_idx], ranked_fitness[survivor_idx]\n",
     "\n",
     "pop_size = 4\n",
