--- a/docs/source/api/problems/numerical/cec2022.rst
+++ b/docs/source/api/problems/numerical/cec2022.rst
@@ -2,41 +2,41 @@
 CEC2022 Test Suit
 =================
 
-.. autoclass:: evox.problems.test_suit.CEC2022TestSuit
+.. autoclass:: evox.problems.numerical.CEC2022TestSuit
     :members:
 
-.. autoclass:: evox.problems.test_suit.F1_CEC2022
+.. autoclass:: evox.problems.numerical.F1_CEC2022
     :members:
 
-.. autoclass:: evox.problems.test_suit.F2_CEC2022
+.. autoclass:: evox.problems.numerical.F2_CEC2022
     :members:
 
-.. autoclass:: evox.problems.test_suit.F3_CEC2022
+.. autoclass:: evox.problems.numerical.F3_CEC2022
     :members:
 
-.. autoclass:: evox.problems.test_suit.F4_CEC2022
+.. autoclass:: evox.problems.numerical.F4_CEC2022
     :members:
 
-.. autoclass:: evox.problems.test_suit.F5_CEC2022
+.. autoclass:: evox.problems.numerical.F5_CEC2022
     :members:
 
-.. autoclass:: evox.problems.test_suit.F6_CEC2022
+.. autoclass:: evox.problems.numerical.F6_CEC2022
     :members:
 
-.. autoclass:: evox.problems.test_suit.F7_CEC2022
+.. autoclass:: evox.problems.numerical.F7_CEC2022
     :members:
 
-.. autoclass:: evox.problems.test_suit.F8_CEC2022
+.. autoclass:: evox.problems.numerical.F8_CEC2022
     :members:
 
-.. autoclass:: evox.problems.test_suit.F9_CEC2022
+.. autoclass:: evox.problems.numerical.F9_CEC2022
     :members:
 
-.. autoclass:: evox.problems.test_suit.F10_CEC2022
+.. autoclass:: evox.problems.numerical.F10_CEC2022
     :members:
 
-.. autoclass:: evox.problems.test_suit.F11_CEC2022
+.. autoclass:: evox.problems.numerical.F11_CEC2022
     :members:
 
-.. autoclass:: evox.problems.test_suit.F12_CEC2022
+.. autoclass:: evox.problems.numerical.F12_CEC2022
     :members:
