doc: install brax in the notebook

--- a/docs/source/guide/basics/2-problems.ipynb
+++ b/docs/source/guide/basics/2-problems.ipynb
@@ -21,7 +21,7 @@
     "try:\n",
     "    import evox\n",
     "except ImportError:\n",
-    "    !pip install --disable-pip-version-check --upgrade -q evox\n",
+    "    !pip install --disable-pip-version-check --upgrade -q evox brax\n",
     "    import evox"
    ]
   },
