doc: add title in the example notebook

--- a/docs/source/example/atari_pong.ipynb
+++ b/docs/source/example/atari_pong.ipynb
@@ -6,10 +6,10 @@
    "source": [
     "# Solving Pong with EvoX\n",
     "\n",
-    "## Notice\n",
-    "\n",
+    "```{attention}\n",
     "Running this notebook requires installing evox, gymnasium, ale-py as well as Pong's image.\n",
-    "Due to copy right issues, we cannot distribute the image here. Please follow the instructions [here](https://github.com/Farama-Foundation/AutoROM) to install the image."
+    "Due to copy right issues, we cannot distribute the image here. Please follow the instructions [here](https://github.com/Farama-Foundation/AutoROM) to install the image.\n",
+    "```"
    ]
   },
   {
