--- a/docs/source/example/custom_algorithm_and_problem.ipynb
+++ b/docs/source/example/custom_algorithm_and_problem.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Custom algorithm and problem\n",
+    "\n",
+    "This this notebook, we will show how to use the `Algorithm` and `Problem` classes to create a custom algorithm and problem.\n",
+    "We will use the one-max problem as an example.\n",
+    "The one-max problem is a simple problem where the goal is to maximize the number of ones in a binary string.\n",
+    "For example, the string `01011` has a fitness of 3."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
