--- a/docs/source/example/gym_classic_control.ipynb
+++ b/docs/source/example/gym_classic_control.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classic control with Gym\n",
+    "\n",
+    "In this notebook, we will use the Gym to train an agent that solves classic control problems."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
