--- a/docs/source/example/pso_ackley.ipynb
+++ b/docs/source/example/pso_ackley.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Numerical Optimization\n",
+    "\n",
+    "In this notebook, we will use the Particle Swarm Optimization (PSO) algorithm to find the minimum of the Ackley function."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
