dev: resolve a conflict in the translation

--- a/docs/source/guide/basics/2-problems.ipynb
+++ b/docs/source/guide/basics/2-problems.ipynb
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Neuroevolution\n",
+    "## Neuroevolution Tasks\n",
     "\n",
     "Here we will be focusing on neuroevolution tasks, where one need to evolve a neural network that suits a certain tasks."
    ]
