--- a/docs/source/guide/basics/2-problems.ipynb
+++ b/docs/source/guide/basics/2-problems.ipynb
@@ -233,7 +233,7 @@
    "outputs": [],
    "source": [
     "monitor = monitors.StdSOMonitor()\n",
-    "workflow = workflows.UniWorkflow(\n",
+    "workflow = workflows.StdWorkflow(\n",
     "    algorithm,\n",
     "    problem,\n",
     "    monitor,\n",
@@ -357,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
