dev: use the new monitor api

--- a/docs/source/example/atari_pong.ipynb
+++ b/docs/source/example/atari_pong.ipynb
@@ -101,7 +101,7 @@
     "    ),\n",
     "    problem=problem,\n",
     "    pop_transform=adapter.batched_to_tree,\n",
-    "    monitor=monitor,\n",
+    "    monitors=[monitor],\n",
     "    opt_direction=\"max\",\n",
     ")"
    ]
