--- a/docs/source/example/custom_algorithm_and_problem.ipynb
+++ b/docs/source/example/custom_algorithm_and_problem.ipynb
@@ -136,7 +136,7 @@
     "workflow = workflows.StdWorkflow(\n",
     "    algorithm,\n",
     "    problem,\n",
-    "    monitor,\n",
+    "    monitors=[monitor],\n",
     "    record_pop=True,\n",
     "    opt_direction=\"max\",\n",
     ")"
