--- a/docs/source/example/gym_classic_control.ipynb
+++ b/docs/source/example/gym_classic_control.ipynb
@@ -115,7 +115,7 @@
     "    algorithm=algorithms.CMAES(center_init=center, init_stdev=1, pop_size=64),\n",
     "    problem=problem,\n",
     "    pop_transform=adapter.batched_to_tree,\n",
-    "    monitor=monitor,\n",
+    "    monitors=[monitor],\n",
     "    opt_direction=\"max\"\n",
     ")"
    ]
