--- a/docs/source/guide/basics/1-start.ipynb
+++ b/docs/source/guide/basics/1-start.ipynb
@@ -198,7 +198,7 @@
     "workflow = workflows.StdWorkflow(\n",
     "    pso,\n",
     "    ackley,\n",
-    "    monitor,\n",
+    "    monitors=[monitor],\n",
     ")"
    ]
   },
@@ -306,7 +306,7 @@
     "workflow = workflows.StdWorkflow(\n",
     "    pso,\n",
     "    ackley,\n",
-    "    monitor,\n",
+    "    monitors=[monitor],\n",
     "    record_pop = True, # <- use this!\n",
     ")\n",
     "\n",
