--- a/docs/source/guide/basics/2-problems.ipynb
+++ b/docs/source/guide/basics/2-problems.ipynb
@@ -236,7 +236,7 @@
     "workflow = workflows.StdWorkflow(\n",
     "    algorithm,\n",
     "    problem,\n",
-    "    monitor,\n",
+    "    monitors=[monitor],\n",
     "    pop_transform=adapter.batched_to_tree,\n",
     "    record_pop=True,\n",
     ")"
