--- a/docs/source/example/pso_ackley.ipynb
+++ b/docs/source/example/pso_ackley.ipynb
@@ -59,7 +59,7 @@
     "workflow = workflows.StdWorkflow(\n",
     "    algorithm,\n",
     "    problem,\n",
-    "    monitor,\n",
+    "    monitors=[monitor],\n",
     "    record_pop=True,\n",
     ")"
    ]
