dev: use the new sol_transforms api

--- a/docs/source/example/atari_pong.ipynb
+++ b/docs/source/example/atari_pong.ipynb
@@ -100,7 +100,7 @@
     "        pop_size=64,\n",
     "    ),\n",
     "    problem=problem,\n",
-    "    pop_transform=adapter.batched_to_tree,\n",
+    "    sol_transforms=[adapter.batched_to_tree],\n",
     "    monitors=[monitor],\n",
     "    opt_direction=\"max\",\n",
     ")"
