--- a/docs/source/example/gym_classic_control.ipynb
+++ b/docs/source/example/gym_classic_control.ipynb
@@ -114,7 +114,7 @@
     "workflow = workflows.StdWorkflow(\n",
     "    algorithm=algorithms.CMAES(center_init=center, init_stdev=1, pop_size=64),\n",
     "    problem=problem,\n",
-    "    pop_transform=adapter.batched_to_tree,\n",
+    "    sol_transforms=[adapter.batched_to_tree],\n",
     "    monitors=[monitor],\n",
     "    opt_direction=\"max\"\n",
     ")"
