--- a/docs/source/guide/basics/2-problems.ipynb
+++ b/docs/source/guide/basics/2-problems.ipynb
@@ -222,8 +222,8 @@
    "source": [
     "Assemble our workflow and fire it!\n",
     "\n",
-    "Notice the `pop_transform` option.\n",
-    "It's used to convert the population into the tree-like structure that representing a neural network's weight."
+    "Notice the `sol_transforms` option.\n",
+    "It's used to convert the candidate solutions into the tree-like structure that representing a neural network's weight."
    ]
   },
   {
@@ -237,7 +237,7 @@
     "    algorithm,\n",
     "    problem,\n",
     "    monitors=[monitor],\n",
-    "    pop_transform=adapter.batched_to_tree,\n",
+    "    sol_transforms=[adapter.batched_to_tree],\n",
     "    record_pop=True,\n",
     ")"
    ]
