--- a/docs/source/guide/basics/1-start.ipynb
+++ b/docs/source/guide/basics/1-start.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Quick Start\n",
     "\n",
-    "EvoX is a distributed GPU-accelerated framework for scalable evolutionary computation."
+    "In this notebook, we will guide you through the basic steps of using EvoX."
    ]
   },
   {
@@ -387,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "2.7.0"
   },
   "orig_nbformat": 4
  },
